# MacJet

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  benchmark_compare_1774606304.json  macjet-mcp.json  macjet.sh  macjet_mcp.py  pyproject.toml  record_demo.py
.cargo/: config.toml
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  benchmarks.md  disk_view.md  git-hooks.md  mcp.md  vhs-demo-recording.md  views.md
examples/: claude_desktop_config.json
macjet/: __init__.py  __main__.py  macjet_app.py
macjet/collectors/: __init__.py  energy_collector.py  metrics_history.py  network_collector.py  process_collector.py
macjet/inspectors/: __init__.py  browser_inspector.py  chrome_tab_mapper.py  container_inspector.py  generic_inspector.py  ide_inspector.py  terminal_inspector.py
macjet/mcp/: __init__.py  cache.py  models.py  resources.py  safety.py  server.py  tools.py
macjet/native/: build.sh  macjet-helper.swift
macjet/ui/: __init__.py  detail_panel.py  drill_screens.py  header.py  heat_chart.py  process_tree.py  reclaim_panel.py  theme.tcss
scripts/: benchmark_quick_6min.sh  benchmark_readme_snippet.py  benchmark_smoke.sh  demo.tape  record-demo.sh  record_demo.py  verify-demo-assets.py
src/: actions.rs  app.rs  benchmark_fingerprint.rs  fixtures.rs  lib.rs  main.rs  telemetry.rs
src/collectors/: chrome_enricher.rs  clock.rs  cpu_predictor.rs  energy_collector.rs  metrics_history.rs  mod.rs  network_collector.rs  process_collector.rs  system_stats.rs
src/disk/: hash.rs  mod.rs  model.rs  names.rs  scan.rs  store.rs  treemap.rs  ui.rs  watch.rs
src/inspectors/: browser_inspector.rs  chrome_tab_mapper.rs  container_inspector.rs  ide_inspector.rs  mod.rs
src/mcp/: cache.rs  disk_index.rs  elicit.rs  mod.rs  models.rs  resources.rs  runtime.rs  safety.rs  server.rs  snapshot.rs
src/ui/: detail_panel.rs  drill_screens.rs  filter_bar.rs  footer.rs  header.rs  help_panel.rs  mod.rs  network_panel.rs  notifications.rs  predict_panel.rs  process_tree.rs  reclaim_panel.rs  styles.rs
tests/: conftest.py
tests/unit/: test_browser_inspector.py  test_cache.py  test_container_inspector.py  test_energy_collector.py  test_ide_inspector.py  test_mcp_models.py  test_mcp_resources.py  test_metrics_history.py  test_network_collector.py  test_process_collector.py  test_process_tree_scroll.py  test_reclaim_scorer.py  test_safety.py
