[package]
name = "macjet"
version = "2.0.1"
edition = "2021"
description = "MacJet — blazing-fast macOS process monitor (100% Rust rewrite)"
default-run = "macjet"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Async runtime - Stripped down features for faster builds
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "net", "process", "sync", "io-std", "io-util"] }
tokio-util = "0.7.18"

# System info
sysinfo = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Performance Optimizations
rustc-hash = "2.0"       # Drop-in fast HashMap replacement
smol_str = "0.3"         # Zero-allocation strings for process names

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
plist = "1.8.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
rmcp = { version = "1.2.0", features = ["elicitation", "server", "macros", "schemars"] }
schemars = { version = "1.0", features = ["derive"] }

# Disk view: scan, index, dedupe, watch, trash
ignore = "0.4"
crossbeam-channel = "0.5"
dirs = "6"
directories = "6"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
notify = "8"
trash = "5"
regex = "1"
once_cell = "1"
rayon = "1"
notify-debouncer-full = "0.7"
supports-color = "3"
treemap = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
strip = true      # Strip symbols
codegen-units = 1 # Better optimization
panic = "abort"   # Remove panic unwinding code to save space

[profile.dev]
opt-level = 0
debug = 1         # Reduced debug info for faster compiles
