[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macjet"
version = "0.4.0"
description = "The flight deck for your Mac — real-time process monitoring, thermal intelligence, and an AI-native MCP server."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jepson Taylor"},
]
keywords = [
    "macos", "process-monitor", "terminal", "tui", "activity-monitor",
    "mcp", "ai-agent", "thermal", "energy", "apple-silicon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "pydantic>=2.0",
]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
macjet = "macjet.__main__:main"
macjet-mcp = "macjet.mcp.server:main"

[project.urls]
Homepage = "https://github.com/jepsontaylor/macjet"
Repository = "https://github.com/jepsontaylor/macjet"
Issues = "https://github.com/jepsontaylor/macjet/issues"
Changelog = "https://github.com/jepsontaylor/macjet/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jepsontaylor/macjet/tree/main/docs"

[tool.setuptools.packages.find]
include = ["macjet*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
